--- a/resources/windows/web-resource.rc
+++ b/resources/windows/web-resource.rc
@@ -21,11 +21,11 @@ BEGIN
         BLOCK "040904b0"  // 0x0409 = US English, 0x04b0 = Unicode
         BEGIN
             VALUE "CompanyName",      "noctvm.io\0"
-            VALUE "FileDescription",  "Playfield Engine Scripting Runtime Virtual Machine\0"
+            VALUE "FileDescription",  "Playfield Engine Web Server and Browser Action\0"
             VALUE "FileVersion",      "1.0.0.0\0"
-            VALUE "InternalName",     "playfield.exe\0"
+            VALUE "InternalName",     "playfield-web.exe\0"
             VALUE "LegalCopyright",   "(C) 2025 Awe Morris\0"
-            VALUE "OriginalFilename", "playfield.exe\0"
+            VALUE "OriginalFilename", "playfield-web.exe\0"
             VALUE "ProductName",      "Playfield Engine\0"
             VALUE "ProductVersion",   "1.0.0.0\0"
         END
