--- a/docs/mkdocs-ja/mkdocs.yml
+++ b/docs/mkdocs-ja/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Playfield Engine ドキュメント
+site_name: Playfield ドキュメント
 repo_url: https://github.com/awemorris/PlayfieldEngine
 use_directory_urls: false
 
