--- a/docs/mkdocs-en/mkdocs.yml
+++ b/docs/mkdocs-en/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Playfield Engine Docs
+site_name: Playfield Docs
 repo_url: https://github.com/awemorris/PlayfieldEngine
 use_directory_urls: false
 
