--- a/resources/windows/editor-resource.rc
+++ b/resources/windows/editor-resource.rc
@@ -21,12 +21,12 @@ BEGIN
         BLOCK "040904b0"  // 0x0409 = US English, 0x04b0 = Unicode
         BEGIN
             VALUE "CompanyName",      "noctvm.io\0"
-            VALUE "FileDescription",  "Playfield Engine Editor\0"
+            VALUE "FileDescription",  "Playfield Editor\0"
             VALUE "FileVersion",      "1.0.0.0\0"
             VALUE "InternalName",     "playfield-editor.exe\0"
             VALUE "LegalCopyright",   "(C) 2025 Awe Morris\0"
             VALUE "OriginalFilename", "playfield-editor.exe\0"
-            VALUE "ProductName",      "Playfield Engine\0"
+            VALUE "ProductName",      "Playfield\0"
             VALUE "ProductVersion",   "1.0.0.0\0"
         END
     END
