Add Wayland support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(playfield LANGUAGES C CXX)
 option(PLAYFIELD_TARGET_WINDOWS       "Build for Windows"                     OFF)
 option(PLAYFIELD_TARGET_MACOS         "Build for macOS"                       OFF)
 option(PLAYFIELD_TARGET_LINUX         "Build for Linux X11"                   OFF)
+option(PLAYFIELD_TARGET_LINUX_WAYLAND "Build for Linux Wayland"               OFF)
 option(PLAYFIELD_TARGET_LINUX_GBM     "Build for Linux Framebuffer"           OFF)
 Option(PLAYFIELD_TARGET_IOS           "Build for iOS"                         OFF)
 option(PLAYFIELD_TARGET_ANDROID       "Build for Android"                     OFF)
@@ -37,6 +38,7 @@ option(PLAYFIELD_ENABLE_ROT90         "Rotate screen"           OFF)
 if(   PLAYFIELD_TARGET_WINDOWS
    OR PLAYFIELD_TARGET_MACOS
    OR PLAYFIELD_TARGET_LINUX
+   OR PLAYFIELD_TARGET_LINUX_WAYLAND
    OR PLAYFIELD_TARGET_LINUX_GBM
    OR PLAYFIELD_TARGET_IOS
    OR PLAYFIELD_TARGET_ANDROID
@@ -161,6 +163,8 @@ elseif(PLAYFIELD_TARGET_MACOS)
   set(STRATO_TARGET_MACOS ON)
 elseif(PLAYFIELD_TARGET_LINUX)
   set(STRATO_TARGET_LINUX ON)
+elseif(PLAYFIELD_TARGET_LINUX_WAYLAND)
+  set(STRATO_TARGET_LINUX_WAYLAND ON)
 elseif(PLAYFIELD_TARGET_LINUX_GBM)
   set(STRATO_TARGET_LINUX_GBM ON)
 elseif(PLAYFIELD_TARGET_IOS)
@@ -469,6 +473,8 @@ endif()
 if(   PLAYFIELD_TARGET_WINDOWS
    OR PLAYFIELD_TARGET_MACOS
    OR PLAYFIELD_TARGET_LINUX
+   OR PLAYFIELD_TARGET_LINUX_WAYLAND
+   OR PLAYFIELD_TARGET_LINUX_GBM
    OR PLAYFIELD_TARGET_FREEBSD
    OR PLAYFIELD_TARGET_NETBSD
    OR PLAYFIELD_TARGET_OPENBSD)
@@ -554,6 +560,8 @@ endif()
 #
 
 if (   PLAYFIELD_TARGET_LINUX
+    OR PLAYFIELD_TARGET_LINUX_WAYLAND
+    OR PLAYFIELD_TARGET_LINUX_GBM
     OR PLAYFIELD_TARGET_FREEBSD
     OR PLAYFIELD_TARGET_NETBSD
     OR PLAYFIELD_TARGET_OPENBSD)
