Fix CMakeLists.txt for *BSD

--- a/external/StratoHAL/CMakeLists.txt
+++ b/external/StratoHAL/CMakeLists.txt
@@ -139,7 +139,7 @@ if(   STRATO_TARGET_LINUX
   find_library(X11_LIBRARY X11 REQUIRED)
   find_library(XPM_LIBRARY Xpm REQUIRED)
   find_library(GL_LIBRARY GL REQUIRED)
-  if(NOT STRATO_TARGET_NETBSD)
+  if(STRATO_TARGET_LINUX OR STRATO_TARGET_FREEBSD)
     find_library(GLX_LIBRARY GLX)
   endif()
 endif()
