Avoid installation on library build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -592,7 +592,7 @@ if(   PLAYFIELD_TARGET_LINUX
    OR PLAYFIELD_TARGET_FREEBSD_WAYLAND
    OR PLAYFIELD_TARGET_NETBSD
    OR PLAYFIELD_TARGET_OPENBSD)
-  if(NOT PLAYFIELD_ENABLE_STATIC OR NOT PLAYFIELD_ENABLE_SHARED)
+  if(NOT PLAYFIELD_ENABLE_STATIC AND NOT PLAYFIELD_ENABLE_SHARED)
     include(GNUInstallDirs)
 
     install(TARGETS playfield RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
